// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimatedFees renders fees with certificate 1`] = `
<div
  className="EstimatedFees"
>
  <h3>
    Estimated fees (LGNT)
  </h3>
  <table>
    <tbody>
      <tr>
        <td>
          Blockchain record
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Certificate fee
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 22n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Total
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 64n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`EstimatedFees renders fees with legal 1`] = `
<div
  className="EstimatedFees"
>
  <h3>
    Estimated fees (LGNT)
  </h3>
  <table>
    <tbody>
      <tr>
        <td>
          Blockchain record
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Legal fee
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 22n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Total
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 64n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`EstimatedFees renders fees with storage 1`] = `
<div
  className="EstimatedFees"
>
  <h3>
    Estimated fees (LGNT)
  </h3>
  <table>
    <tbody>
      <tr>
        <td>
          Blockchain record
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          File storage
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 32n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Total
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 74n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`EstimatedFees renders fees with storage and paid by 1`] = `
<div
  className="EstimatedFees"
>
  <h3>
    Estimated fees (LGNT)
  </h3>
  <table>
    <tbody>
      <tr>
        <td>
          Blockchain record
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
        <td>
          paid by the Legal Officer
        </td>
      </tr>
      <tr>
        <td>
          File storage
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 32n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
        <td>
          paid by the requester
        </td>
      </tr>
      <tr>
        <td>
          Total
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 74n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`EstimatedFees renders fees without storage 1`] = `
<div
  className="EstimatedFees"
>
  <h3>
    Estimated fees (LGNT)
  </h3>
  <table>
    <tbody>
      <tr>
        <td>
          Blockchain record
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
      <tr>
        <td>
          Total
        </td>
        <td>
          <AmountFormat
            amount={
              Lgnt {
                "canonical": 42n,
              }
            }
            decimals={4}
            unit={
              Object {
                "symbol": "",
                "tenExponent": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
